@@ -1,4 +1,14 @@
-2001-03-25  James Henstridge  <james@daa.com.au>
+2001-03-27  James Henstridge  <james@daa.com.au>
+
+	* gobjectmodule.c (pyg_signal_class_closure_get): new function to
+	get the closure used as the `class closure' for signals.  We only
+	need one, as we can get all the information we need from the
+	invocation hint.
+
+2001-03-26  James Henstridge  <james@daa.com.au>
+
+	* gobjectmodule.c (pygobject__class_init__): add some comments
+	about creating new GTypes here.
 
 	* gobjectmodule.c: add type info functions to module.
 
